--- a/lab5/Bai3/CheckForm/src/main/webapp/style.css
+++ b/lab5/Bai3/CheckForm/src/main/webapp/style.css
@@ -98,3 +98,9 @@ label.error {
     color: red;
     font-size: 14px;
 }
+label.success {
+    font-weight: 700;
+    display: block;
+    color: greenyellow;
+    font-size: 14px;
+}
